// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenuLevel2 should render component when renderItem is called 1`] = `
<ForwardRef
  accessibilityRole="button"
  onPress={[Function]}
>
  <MenuItems
    hasBadge={true}
    hasL3={true}
    item={
      Object {
        "categoryContent": Object {
          "mainCategory": Object {
            "promoBadge": Array [
              Object {
                "text": "1",
              },
            ],
          },
        },
        "subCategories": Array [
          Object {
            "title": "abcd",
          },
        ],
      }
    }
    maxWidthItem={510}
    promoBannerMargin={40}
    route={[Function]}
  />
</ForwardRef>
`;

exports[`NavMenuLevel2 should render component when renderItem is with title categories called 1`] = `
<ForwardRef
  accessibilityRole="button"
  onPress={[Function]}
>
  <MenuItems
    hasBadge={true}
    hasL3={true}
    item={
      Object {
        "categoryContent": Object {
          "mainCategory": Object {
            "promoBadge": Array [
              Object {
                "text": "1",
              },
            ],
          },
        },
        "subCategories": Array [
          Object {
            "title": "abcd",
          },
        ],
      }
    }
    maxWidthItem={510}
    promoBannerMargin={40}
    route={[Function]}
  />
</ForwardRef>
`;

exports[`NavMenuLevel2 should render component when renderSectionHeader is called 1`] = `
<ForwardRef>
  <ForwardRef
    accessibilityText=""
    color="text.primary"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="Lorem Ipsum"
    textDecoration={null}
  />
</ForwardRef>
`;

exports[`NavMenuLevel2 should render component when renderSectionHeader is called with Categories 1`] = `
<ForwardRef>
  <ForwardRef
    accessibilityText=""
    color="text.primary"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="Categories"
    textDecoration={null}
  />
</ForwardRef>
`;

exports[`NavMenuLevel2 should render correctly 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(TouchableOpacity)
      accessibilityRole="button"
      onPress={[Function]}
    >
      <Styled(Image)
        source={
          Object {
            "testUri": "../../../../core/src/assets/carrot-large-left.png",
          }
        }
      />
    </Styled(TouchableOpacity)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs16"
      margin={null}
      numberOfLines={null}
      text="GIRL"
      textAlign="center"
      textDecoration={null}
    />
    <Text />
  </Styled(View)>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [],
          "order": NaN,
          "title": undefined,
        },
        Object {
          "data": Array [],
          "order": NaN,
          "title": undefined,
        },
        Object {
          "data": Array [
            Object {
              "links": Array [
                Object {
                  "text": "1",
                  "url": "1",
                },
                Object {
                  "text": "2",
                  "url": "2",
                },
                Object {
                  "text": "3",
                  "url": "3",
                },
                Object {
                  "text": "4",
                  "url": "4",
                },
                Object {
                  "text": "5",
                  "url": "5",
                },
                Object {
                  "text": "6",
                  "url": "6",
                },
                Object {
                  "text": "7",
                  "url": "7",
                },
                Object {
                  "text": "8",
                  "url": "8",
                },
              ],
            },
          ],
          "order": 0,
          "title": "Shop By Size",
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Fragment>
`;
